--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,18 @@
   font-family: "montserrat", sans-serif;
   font-size: 16px;
   line-height: 1.5;
+  box-sizing: border-box;
+
 }
 
+header{
+display: flex;
+flex-direction: column;
+background-color: whitesmoke;
+justify-content: center;
+margin-right: auto;
 
+}
 
 .main-title{
   margin-top:2rem;
@@ -12,18 +21,18 @@
   padding: 0;
   text-align: center;
   font-weight: bold;
+ } 
+ 
+ nav ul {
+  text-transform: uppercase;
+  font-weight: bold;
+  display: block;
+  background-color:oldlace;
  }
 
-nav ul{
-text-transform: uppercase;
-margin-top: 50px;
-list-style-type: none;
-display: block;
-font-weight: bold;
-text-align: center;
 
-}
-.home-button, .portfolio-button, .contact-button {
+
+.home-button, .portfolio-button, .contact-button, .skill-button {
   display: flex;
   justify-content: center;
   border: 16px solid whitesmoke;
@@ -31,10 +40,20 @@ text-align: center;
 
 }
 
+
+
+
+.wrapper{
+margin: 1em;
+padding: 1em;
+} 
+
+
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 50px;
 }
 
 
@@ -52,6 +71,25 @@ p {
   text-align: center;
 }
 
+ul li {
+text-align: center;
+}
+
+
+
+footer{
+background-color: whitesmoke;
+}
+
+.sub-title{
+display: flex;
+justify-content: space-between;
+text-transform: capitalize;
+font-weight: bold;
+
+}
+
+
 @media screen and (min-width: 768px) {
 
   header{
@@ -61,7 +99,13 @@ p {
 
   }
 
+.wrapper {
+  width: 70%;
+  max-width: 1000px;
+  margin: 0 auto;
 
+
+}
 
 
   .content{
