--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,10 @@ nav ul {
   background-color: oldlace;
 }
 
+a {
+  text-decoration: none;
+}
+
 .home-button,
 .portfolio-button,
 .contact-button,
@@ -33,8 +37,21 @@ nav ul {
   border: 16px solid whitesmoke;
 }
 
+a:hover {
+  color: blue;
+}
+
 img {
   max-width: 100%;
+}
+
+.intro-text {
+  font-family: "roboto", sans-serif;
+  color: mediumvioletred;
+}
+
+main {
+  background-color: honeydew;
 }
 
 .wrapper {
@@ -64,6 +81,18 @@ footer {
   background-color: whitesmoke;
 }
 
+.footer-display {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  text-transform: capitalize;
+  margin-top: 0px;
+}
+
+.full {
+  display: none;
+}
+
 hr {
   margin-top: 50px;
 }
@@ -76,22 +105,46 @@ hr {
 }
 
 @media (min-width: 768px) {
-  .wrapper {
-    max-width: 1000px;
-    margin: auto;
+  .main-title {
+    margin-top: 0;
   }
 
-  header {
-    display: flex;
-    flex-direction: row;
-  }
-
-  nav ul {
+  .top-bar {
     display: flex;
     justify-content: space-between;
   }
-
-  .main-title {
-    margin-left: 0;
+  ul li {
+    display: inline-block;
   }
+
+  img {
+    float: right;
+  }
+
+  .profile-image {
+    width: 200px;
+    margin-left: 2em;
+  }
+
+  .content {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+  }
+
+  .top {
+    display: none;
+  }
+
+  .full {
+    display: inline-block;
+    margin: 0 20px;
+  }
+
+  ul li:first-child {
+    margin-left: 0px;
+  }
+}
+
+@media (min-width: 1024px) {
 }
