updated media query

--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,7 @@ a:hover {
 
 img {
   max-width: 100%;
+  padding-top: 1em;
 }
 
 .intro-text {
@@ -54,14 +55,9 @@ main {
   background-color: honeydew;
 }
 
-.wrapper {
-  padding: 1em;
-}
-
 h2 {
   text-transform: capitalize;
   text-align: center;
-  margin-top: 50px;
 }
 
 .portfolio {
@@ -77,7 +73,6 @@ ul li {
 }
 
 footer {
-  background-position: auto;
   background-color: whitesmoke;
 }
 
@@ -87,6 +82,7 @@ footer {
   align-items: baseline;
   text-transform: capitalize;
   margin-top: 0px;
+  font-weight: bold;
 }
 
 .full {
@@ -117,23 +113,24 @@ hr {
     display: inline-block;
   }
 
-  /* img {
-    float: right;
-  }
-
-  .profile-image {
-    width: 200px;
-    margin-left: 2em;
-  } */
-
   .intro {
     display: flex;
-    order: 1 0;
+    flex-direction: row-reverse;
+  }
+
+  #portfolio {
+    text-align: center;
   }
 
   .content {
     display: flex;
-    flex-direction: row;
+    flex-wrap: nowrap;
+  }
+
+  .skillsets {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
   }
 
   .top {
@@ -147,5 +144,12 @@ hr {
 
   ul li:first-child {
     margin-left: 0px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .content-laptop {
+    display: flex;
+    flex-wrap: wrap;
   }
 }
